--- a/ind.html
+++ b/ind.html
@@ -39,5 +39,6 @@
         </div>
     </div>
     <script src="js/script.js"></script>
+    <script src="https://unpkg.com/moment" />
 </body>
 </html>
